--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,300;0,500;1,600&family=Roboto+Slab:wght@100;300;500&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <div class="form-background">
+
+    </div>
         <div class="header">
             <span class="headerTitle">Le grand library</span>
             <button class="plus-btn" onClick="handlePlusBookClick()">+</button>
-                        <button class="plus-btn" onClick="handleMinusBookClick()">-</button>
 
             <button class="log-in-btn" onClick="handleLogInClick()">Log in</button>
 
