Updating form style

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
 
-    <div class="form-background">
-
+    <div class="form-background active" onClick="closeForm(event)">
+        <div class="form active">FORM</div>
     </div>
         <div class="header">
             <span class="headerTitle">Le grand library</span>
-            <button class="plus-btn" onClick="handlePlusBookClick()">+</button>
+            <button class="plus-btn" onClick="openForm()">+</button>
 
             <button class="log-in-btn" onClick="handleLogInClick()">Log in</button>
 
