Fixed overflow bug by limiting input char length

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <form id="addBook-form" onsubmit="event.preventDefault();addBook(this); return false;">
 
                     <label for="title">Title:</label>
-                    <input type="text" maxlength="30" id="title" name="title" label='title' placeholder="My little pony">
+                    <input type="text" maxlength="31" id="title" name="title" label='title' placeholder="My little pony">
 
                     <label for="author">Author:</label>
-                    <input type="text" maxlength="30" id='author' name="author" label='author' placeholder="by John Smith">
+                    <input type="text" maxlength="22" id='author' name="author" label='author' placeholder="by John Smith">
 
 
-                    <label for="wasRead">READ
-                    <input type="checkbox" name="wasRead" id="wasRead" class="checkbox">
+                    <label for="wasRead">
+                        READ<input type="checkbox" name="wasRead" id="wasRead" class="checkbox">
                     </label>
 
 
