added shadowbox to header

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     
         <div class="header">
             <span class="headerTitle">Le grand library</span>
-            <button class="plus-btn" onClick="addFakeBook()">+</button>
+            <button class="plus-btn" onClick="openForm()">+</button>
+            <button onClick="lib.toggleArrowIcon()">toggle</button>
 
             <button class="log-in-btn" onClick="handleLogInClick()">Log in</button>
 
